test: Rewrite tests to use Mockito instead of EasyMock (#12300)